--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -3,7 +3,7 @@
   <div text-center margin-top>
     <h1 class="textWhite">Login</h1>
   </div>
-
+<!-- 
   <ion-badge class="badge-full shadow1" color="primary" text-center margin-top>Login using Pre accounts</ion-badge>
   <div padding>
   <button  ion-item block color="facebook" no-lines>
@@ -14,9 +14,9 @@
         <ion-icon item-left name="logo-google" ></ion-icon>
         Google
       </button>
-    </div>
+    </div> -->
 
-    <ion-badge class="badge-full shadow1" color="primary" text-center margin-bottom margin-top>or Sign in with e-mail</ion-badge>
+    <!-- <ion-badge class="badge-full shadow1" color="primary" text-center margin-bottom margin-top>Sign in with e-mail</ion-badge> -->
   <ion-list margin-top>
       <ion-item>
           <ion-icon name="options" item-left color="color9"></ion-icon>
